--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@ body {
 }
 #ms_jumbotron p {
     font-size: 23px;
+    color: rgba(255, 255, 255, 0.7);
 }
 #ms_jumbotron .form-group input {
     font-size: 18px;
@@ -66,11 +67,12 @@ body {
     width: 100%;
 }
 #ms_jumbotron form img {
-    height: 100%;
+    height: 21px;
 }
 #ms_jumbotron form span:first-child {
-    position: relative;
-    left: -30%;
+    position: absolute;
+    left: 7%;
+    bottom: 21%;
 }
 #ms_jumbotron h5 {
     margin-top: 20px;
@@ -97,10 +99,11 @@ h5 a {
     color: grey;
 }
 .ms_text {
-    margin: 70px 0;
+    margin-top: 70px;
 }
 .sing_up {
-    margin-top: 50px;
+    position: relative;
+    margin: 70px 0;
     padding-top: 25px;
     padding-bottom: 30px;
     padding-right: 15px;
@@ -114,4 +117,12 @@ h5 a {
 .sing_up h3:nth-child(2) {
     margin-top: 0;
     color: #004AFF;
+}
+
+@media screen and (max-width: 992px) {
+  
+    #ms_jumbotron h1 {
+        font-size: 37px;
+    }
+
 }
