--- a/css/style.css
+++ b/css/style.css
@@ -324,6 +324,50 @@ h2 {
     padding: 10px 15px;
 }
 
+/* FOOTER */
+footer {
+    padding: 60px 0;
+    color: white;
+    background-color: #031C4E;
+}
+footer .list_inline li {
+    display: inline-block;
+    margin-top: 15px;
+    margin-right: 15px;
+    text-decoration:  none;
+    color: rgba(255, 255, 255, 0.6);
+}
+footer .ms_list {
+    list-style: none;
+}
+footer .ms_list li {
+    margin-top: 12px;
+}
+footer .ms_list li a {
+    font-size: 16px;
+    color: rgba(255, 255, 255, 0.5);
+}
+footer p{
+    margin-top: 10px;
+    margin-bottom: 0;
+    font-size: 16px;
+    color: rgba(255, 255, 255, 0.6);
+}
+footer h4 {
+    font-size: 20px;
+}
+footer h5 {
+    font-size: 16px;
+    margin-top: 5px;
+    color: rgba(255, 255, 255, 0.4);
+}
+footer ul {
+    padding: 0;
+}
+footer .fab {
+    font-size: 23px;
+}
+
 
 
 @media screen and (max-width: 992px) {
